--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,19 @@
       "name": "pravotest",
       "path": "",
       "files": {
+        "29792685": {
+          "id": "29792685",
+          "path": "img/right-arrow.png",
+          "output": "img/right-arrow.png",
+          "name": "right-arrow.png",
+          "category": "IMAGE",
+          "size": 6914,
+          "type": "png",
+          "initialSize": 6914,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
